# llama-benchy

./: .gitignore  README.md  llm_bench.py  pyproject.toml  requirements.txt
examples/: benchmark_visualization.ipynb
src/llama_benchy/: __init__.py  __main__.py  _version.py  client.py  config.py  results.py  runner.py
tests/: mock_server.py  test_mock_integration.py
