[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-benchy"
version = "0.1.0"
description = "llama-bench style benchmarking tool for all OpenAI-compatible LLM endpoints"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Eugene Rakhmatulin" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "openai",
    "transformers",
    "tabulate",
    "numpy",
    "requests",
    "asyncio",
    "aiohttp",
]

[project.scripts]
llama-benchy = "llama_benchy.__main__:main"

[project.urls]
"Homepage" = "https://github.com/eugr/llama-benchy"
"Bug Tracker" = "https://github.com/eugr/llama-benchy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llama_benchy"]